# node-fprintd

./: CMakeLists.txt  README.md  node-fprintd.d.ts  node-fprintd.js  package-lock.json  package.json
.github/workflows/: npm-publish.yml
src/: main.c  node-fprintd.c  node-fprintd.h
